--- a/style.css
+++ b/style.css
@@ -73,6 +73,15 @@ input:focus{
     outline: none;
 }
 
+.infoJS{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    font-style: italic;
+    font-size: 8pt;
+    margin-top: 7px;
+    letter-spacing: normal;
+    color: hsl(0, 100%, 67%);
+}
 
 .data-result{
     margin-top: 30px;
